# Vatrych_KI-402_v4

./: CMakeLists.txt  README.md  ci.bat  google_sheets_export.txt  script.txt  unit_tests.cpp
.github/workflows/: ci.yml
tests/: unit_tests.cpp
